--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lama-dev-portfolio-starter",
+  "name": "keyun-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,16 +10,26 @@
   },
   "dependencies": {
     "@emailjs/browser": "^3.12.1",
+    "@loaders.gl/gltf": "^4.2.2",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@use-gesture/react": "^10.3.1",
     "framer-motion": "^11.0.3",
     "next": "14.1.0",
+    "next-compose-plugins": "^2.2.1",
+    "next-transpile-modules": "^10.0.1",
     "react": "18",
-    "react-dom": "18"
+    "react-dom": "18",
+    "three": "^0.167.1"
   },
   "devDependencies": {
-    "autoprefixer": "10.0.1",
+    "autoprefixer": "^10.0.1",
+    "css-loader": "^7.1.2",
     "eslint": "8",
     "eslint-config-next": "14.1.0",
-    "postcss": "8",
+    "postcss": "^8.4.40",
+    "postcss-loader": "^8.1.1",
+    "style-loader": "^4.0.0",
     "tailwindcss": "3.3.0"
   }
 }
